# EditableFlask

./: CHANGELOG  LICENSE  MANIFEST.in  PKG-INFO  README.md  setup.cfg  setup.py
EditableFlask/: __init__.py  editable.py  views.py
EditableFlask/assets/: script.js  style.css
EditableFlask/templates/: edits-admin.html  login_prompt.html  static.html
