[metadata]
name = EditableFlask
version = 0.0.1
author = Mahir Shah
author_email = mahir.shah.sd@gmail.com
discription = Addon to Library named flask which helps to edit html content in running app
long_discription = file: README.metadata
long_discription_content_type = text/markdown
url = https://github.com/MahirShah07/
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audiance :: All
    Opearting System :: Windows :: Linux :: MacOS
    License :: OSI Approved :: MIT License
    Programming Language :: Python  :: 3

[options]
packages = find:
requires = >=3.7
